# cs225-final-project

./: CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
documents/: CS 225 Final Presentation.pptx  contract.md  proposal.md  results.md
entry/: main.cpp
lib/: CMakeLists.txt
main/: main.cpp
src/: CMakeLists.txt  graph.cpp  graph.h
template/: cs225.mk
tests/: catch.cpp  catch.hpp  dummyDept.txt  dummyUsers.txt  eularianDept.txt  eularianUsers.txt  tests.cpp
